[package]
edition = "2021"
name = "iptv"
version = "0.2.1"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
argh = { git = "https://github.com/google/argh.git", default-features = false }

des = "0.8"
ecb = { version = "0.1", features = ["alloc", "block-padding"] }
hex = "0.4"
md5 = "0.7"
rand = "0.8"
regex-lite = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "cookies",
    "json",
]}
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
] }
xml-rs = "0.8.19"
quick-xml = { version = "0.38.4", features = ["serialize"] }
actix-web = { version="4.5", default-features = false, features = ["macros"] }
anyhow = "1.0.76"
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
futures-util = "0.3"
once_cell = "1.21.3"
tokio = "1.48.0"




[features]
http2 = ["reqwest/http2"]
tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
